--- a/smartcab/Smartcab.ipynb
+++ b/smartcab/Smartcab.ipynb
@@ -28,9 +28,11 @@
     "\n",
     "The directions were picked as they were the only valid actions the agents can take. The states were shown to be what could get affect the motion of the agent, referenced from the dummy agent.\n",
     "\n",
-    "By setting up as the deadline limit, it provides limited number of tries the agent can do to get to the destination. If we do not have the deadline limit, the agent will eventually reach to the point, as there is a finite grid of the table.\n",
+    "By setting up as the deadline limit, it provides limited number of tries the agent can do to get to the destination. Addtionally, we do not want the number of deadline variable to blow up state space into a size that can't be explored by the agent in 100 trials. If the agent could never get to the destination, the program would have been running non-stop with out the deadline.\n",
     "\n",
-    "Within the Q-modeling, the state picks up whether the traffic light is green/red, 'oncoming', 'left, and waypoint. I did not take in 'right', as knowing the status of the 'left' will indicate whether there is a right. Traffic light provides whether the car can move or not, 'oncoming' shows whether there is a car that is blocking the agent's way, 'left' shows how the car is making it's next poing, and the waypoint shows where the destination is."
+    "Within the Q-modeling, the state picks up whether the traffic light is green/red, 'oncoming', 'left, and waypoint. I did not take in 'right', as knowing the status of the 'left' will indicate whether there is a right. Traffic light provides whether the car can move or not, 'oncoming' shows whether there is a car that is blocking the agent's way, 'left' shows how the car is making it's next poing, and the waypoint shows where the destination is.\n",
+    "\n",
+    "Another reason to exclude the traffic to the right, as the car in the State has a right-hand rule, where the car can turn right even if the the traffic light is red."
    ]
   },
   {
@@ -52,36 +54,27 @@
     "\n",
     "Here are the list of changes regarding to the constants for alpha, gamma, and epison. We went through the trial and erorr to find out the best tuning for the algorithmn. By changing/tuning over the values, we found the the tuning is at the most optimal at.\n",
     "\n",
-    "Here's the chart for the tuning:\n",
+    "Here's the chart for the tuning for 3 trials:\n",
     "\n",
-    "alpha|gamma|episilon|deadline\n",
-    "---|---|---|---\n",
-    "0.25|0.25|0.25|-41\n",
-    "0.25|0.25|0.5|-83\n",
-    "0.25|0.25|0.75|-19\n",
-    "0.25|0.25|1|5\n",
-    "0.25|0.5|0.25|-23\n",
-    "0.25|0.5|0.5|24\n",
-    "0.25|0.5|0.75|-6\n",
-    "0.25|0.5|1|-45\n",
-    "0.25|0.75|0.25|-5\n",
-    "0.25|0.75|0.5|-14\n",
-    "0.25|0.75|0.75|-183\n",
-    "0.25|0.75|1|-6\n",
-    "0.25|1.0|0.25|20\n",
-    "0.5|0.5|0.5|-44\n",
-    "0.75|0.5|0.5|-39\n",
-    "0.75|0.75|0.5|8\n",
-    "0.75|0.75|0.75|-3\n",
-    "1|0.75|0.75|-6\n",
-    "1|1|0.75|-112\n",
-    "1|1|1|-82\n",
+    "alpha|gamma|episilon|avg_deadline|success_rate|cumulative rewards\n",
+    "---|---|---|---|---|\n",
+    "1|0.25|0.25|22.3|100%|1.5\n",
+    "1|0.25|0.5|4.3|33%|2\n",
+    "1|0.25|0.75|0|0%|-1.5\n",
+    "1|0.25|1|0|0%|-2\n",
+    "1|0.5|0.25|3.6|33%|2\n",
+    "1|0.5|0.5|0|0%|-2\n",
+    "0.75|0.5|0.5|-0|0%|-0.5\n",
+    "0.75|0.75|0.5|0|0%|1\n",
+    "0.75|0.75|0.75|9.6|33%|1.5\n",
     "\n",
-    "The trial was run 2 times for each parameter, and takes the average of the deadline to get the number. I am currently basing on how well the car is performing by letting the car run as long as possible, and see how long does it take for it to get to the destination.\n",
     "\n",
-    "Ideally, the optimal policy would have the agent be aware of the location of the destination consistently. An ideal policy would also provide a detection of the oncoming cars in a bigger radius then the current state, where the agent only found the other cars through intersections.\n",
+    "The trial was run 3 times for each parameter, and takes the average of the deadline to get the number, successful rate out of 3 trials, and cumulative rewards from the successful trips. It seems like the agent does well when the alpha == 1, and the gamma and episilon is on the lower side.\n",
     "\n",
-    "Another optimal policy would be stricter at the law breaking. If the car is breaking the law by passing the red lights, add in harsher rewards reduction to prevent the car from breaking the law."
+    "\n",
+    "Within my model, there are times when the agent just goes in circle, and it unable to find the destination. Also at the beginning the car would not move even though it is safe for the agent to travel. I also realized when the destination is closed by on the right side of the agent, it takes awhile for the agent to recognize the destination, and then follow through to the right direction.\n",
+    "\n",
+    "The ideal optimal policy would be able to have the location to be spotted by the agent, and build the next step based on where the locaiton is at. Additionally, the agent does not always obey the traffic law, and would take right turn ont eh red traffic light. To prevent the learning agent from breaking the traffic laws would be adding more penalty when the agent is not breaking the law."
    ]
   },
   {
